--- a/i3/config
+++ b/i3/config
@@ -187,6 +187,19 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
+# assign workspaces to specific monitors    #changes with computer
+workspace_layout default
+workspace 1 output primary
+workspace 2 output HDMI-0
+workspace 3 output primary
+workspace 4 output HDMI-0
+workspace 5 output primary
+workspace 6 output HDMI-0
+workspace 7 output primary
+workspace 8 output HDMI-0
+workspace 9 output primary
+workspace 10 output HDMI-0
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
