--- a/i3/config
+++ b/i3/config
@@ -189,11 +189,11 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # assign workspaces to specific monitors    #changes with computer
 workspace_layout default
-workspace 1 output primary
-workspace 2 output primary
-workspace 3 output primary
-workspace 4 output primary
-workspace 5 output primary
+workspace 1 output DP-0
+workspace 2 output DP-0
+workspace 3 output DP-0
+workspace 4 output DP-0
+workspace 5 output DP-0
 workspace 6 output HDMI-0
 workspace 7 output HDMI-0
 workspace 8 output HDMI-0
