Picom and Neovim

--- a/picom/picom/cool.conf
+++ b/picom/picom/cool.conf
@@ -31,5 +31,7 @@ opacity-rule = [
     "70:class_g = 'Alacritty' && !focused",
 
     "70:class_g = 'Spotify' && focused",
-    "40:class_g = 'Spotify' && !focused"
+    "40:class_g = 'Spotify' && !focused",
+
+    "100:class_g = 'zathura'"
 ];
