--- a/picom/picom/picom.conf
+++ b/picom/picom/picom.conf
@@ -6,10 +6,11 @@ shadow-opacity = 0.1;
 shadow-offset-y = -5;
 shadow-offset-x = -5;
 
-corner-radius = 5;
+corner-radius = 30;
 
 rounded-corners-exclude = [
-    "class_g = 'i3bar'"
+    "class_g = 'i3bar'",
+    "class_g = 'dmenu'",
 ];
 
 fading = false;
