--- a/i3/i3/config
+++ b/i3/i3/config
@@ -52,7 +52,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:FiraCode Nerd Font 10
+font pango:FiraCode Nerd Font 16
 # is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
@@ -71,13 +71,6 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
-
-# Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -189,11 +182,11 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # assign workspaces to specific monitors    #changes with computer
 workspace_layout default
-workspace 1 output DP-0
-workspace 2 output DP-0
-workspace 3 output DP-0
-workspace 4 output DP-0
-workspace 5 output DP-0
+workspace 1 output primary
+workspace 2 output primary
+workspace 3 output primary
+workspace 4 output primary
+workspace 5 output primary
 workspace 6 output HDMI-0
 workspace 7 output HDMI-0
 workspace 8 output HDMI-0
@@ -248,7 +241,7 @@ bar {
 	}
 }
 
-# exec_always --no-startup-id picom --config $HOME/.config/picom/picom.conf
+exec_always --no-startup-id picom --config $HOME/.config/picom/picom.conf
 exec_always --no-startup-id feh --bg-scale --randomize $HOME/Pictures/WallPapers/*
 
 workspace_auto_back_and_forth yes
@@ -256,21 +249,27 @@ workspace_auto_back_and_forth yes
 #debatable
 focus_follows_mouse no
 
-bindsym $mod+F3 exec amixer -q set Master 2dB+ unmute
-bindsym $mod+F2 exec amixer -q set Master 2dB- unmute
-bindsym $mod+F1 exec amixer -q set Master toggle
+bindsym $mod+F3 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10%
+bindsym $mod+F2 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10%
+bindsym $mod+F1 exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
 
-bindsym $mod+F6 exec light -A 2
-bindsym $mod+F5 exec light -U 2
+# Use pactl to adjust volume in PulseAudio.
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10%
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
+#bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
+
+bindsym $mod+F8 exec light -A 2
+bindsym $mod+F7 exec light -U 2
 
 # Shutdown - Restart - suspend menu
-mode "[L]ogout, [R]eboot, [S]hutdown" {
-	#bindsym 1 exec --no-startup-id $i3lockwall, mode "default"
+mode "[L]ogout, [R]eboot, [S]hutdown, s[U]spend" {
+	bindsym 1 exec --no-startup-id i3lock, mode "default"
 	bindsym l exec --no-startup-id i3-msg exit, mode "default"
 
 	#add lock screen when cool
-	#bindsym s exec --no-startup-id systemctl suspend, mode "default"
-	#bindsym h exec --no-startup-id systemctl hibernate, mode "default"
+	bindsym u exec --no-startup-id systemctl suspend, mode "default"
+	bindsym h exec --no-startup-id systemctl hibernate, mode "default"
 
 	bindsym r exec --no-startup-id systemctl reboot, mode "default"
 	bindsym s exec --no-startup-id systemctl poweroff -i, mode "default"
@@ -278,10 +277,11 @@ mode "[L]ogout, [R]eboot, [S]hutdown" {
 	bindsym Return mode "default"
 	bindsym Escape mode "default"
 }
-bindsym $mod+BackSpace mode "[L]ogout, [R]eboot, [S]hutdown"
+bindsym $mod+BackSpace mode "[L]ogout, [R]eboot, [S]hutdown, s[U]spend"
 
 for_window [window_role="pop-up"] floating enable
 for_window [window_role="task_dialog"] floating enable
+for_window [class="matplotlib"] floating enable
 
 #smart_gaps on
 #hide_edge_borders smart_no_gaps
@@ -301,5 +301,5 @@ default_floating_border pixel 5
 #for_window [class=".*"] border pixel 1
 
 #smart_gaps on
-gaps inner 4
-gaps outer 2
+gaps inner 20
+gaps outer 00
