--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -42,6 +42,7 @@ set-window-option -g pane-base-index 1
 
 #fix Esc + whatever issues
 set -s escape-time 0
+
 # Alt-j/k to goto next window
 bind -n M-j previous-window
 bind -n M-k next-window
@@ -115,3 +116,13 @@ set-window-option -g window-status-current-format "#[bg=colour214,fg=colour237,n
 set-window-option -g window-status-format "#[bg=colour239,fg=colour237,noitalics]#[bg=colour239,fg=colour223] #I #[bg=colour239,fg=colour223] #W #[bg=colour237,fg=colour239,noitalics]"
 
 # vim: set ft=tmux tw=0 nowrap:
+bind -n M-1 select-window -t 1
+bind -n M-2 select-window -t 2
+bind -n M-3 select-window -t 3
+bind -n M-4 select-window -t 4
+bind -n M-5 select-window -t 5
+bind -n M-6 select-window -t 6
+bind -n M-7 select-window -t 7
+bind -n M-8 select-window -t 8
+bind -n M-9 select-window -t 9
+
