--- a/alacritty/alacritty/alacritty.toml
+++ b/alacritty/alacritty/alacritty.toml
@@ -1,18 +1,18 @@
 [font]
-size = 11
+size = 10.0
 
 [font.bold]
-family = "FiraCode Nerd Font Mono"
+family = "NotoSansM Nerd Font Mono"
 style = "Bold"
 
 [font.bold_italic]
-family = "FiraCode Nerd Font Mono"
+family = "NotoSansM Nerd Font Mono"
 style = "Bold Italic"
 
 [font.italic]
-family = "FiraCode Nerd Font Mono"
+family = "NotoSansM Nerd Font Mono"
 style = "Italic"
 
 [font.normal]
-family = "FiraCode Nerd Font Mono"
+family = "NotoSansM Nerd Font Mono"
 style = "Regular"
