--- a/alacritty/alacritty/alacritty.toml
+++ b/alacritty/alacritty/alacritty.toml
@@ -2,17 +2,17 @@
 size = 10.0
 
 [font.bold]
-family = "NotoSansM Nerd Font Mono"
+family = "JetBrains Mono Nerd Font"
 style = "Bold"
 
 [font.bold_italic]
-family = "NotoSansM Nerd Font Mono"
+family = "JetBrains Mono Nerd Font"
 style = "Bold Italic"
 
 [font.italic]
-family = "NotoSansM Nerd Font Mono"
+family = "JetBrains Mono Nerd Font"
 style = "Italic"
 
 [font.normal]
-family = "NotoSansM Nerd Font Mono"
+family = "JetBrains Mono Nerd Font"
 style = "Regular"
