--- a/hyprland/hypr/hyprland.conf
+++ b/hyprland/hypr/hyprland.conf
@@ -5,7 +5,7 @@ $browser = firefox
 $menu = wofi --show drun
 $launcher = wofi --show drun
 $fileManager = dolphin
-$tmux_attach = tmux attach
+$tmux_attach = sh -c "tmux attach"
 $tmux_new = tmux
 
 # Monitors / Workspaces
@@ -15,8 +15,7 @@ monitor=DP-4,1920x1080@60,0x0,1
 
 general {
     gaps_in = 5
-    gaps_out = 20
-
+    gaps_out = 10
     border_size = 2
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
@@ -38,8 +37,8 @@ decoration {
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
+    active_opacity = 0.9
+    inactive_opacity = 0.5
 
     shadow {
         enabled = true
@@ -53,7 +52,6 @@ decoration {
         enabled = true
         size = 3
         passes = 1
-
         vibrancy = 0.1696
     }
 }
@@ -131,7 +129,7 @@ input {
     kb_options =
     kb_rules =
 
-    follow_mouse = 0
+    follow_mouse = 1
 
     sensitivity = -0.1 # -1.0 - 1.0, 0 means no modification.
 
@@ -183,32 +181,32 @@ bind = $mod, K, movefocus, u
 bind = $mod, J, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+bind = $mod, 1, workspace, 1
+bind = $mod, 2, workspace, 2
+bind = $mod, 3, workspace, 3
+bind = $mod, 4, workspace, 4
+bind = $mod, 5, workspace, 5
+bind = $mod, 6, workspace, 6
+bind = $mod, 7, workspace, 7
+bind = $mod, 8, workspace, 8
+bind = $mod, 9, workspace, 9
+bind = $mod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $mod SHIFT, 1, movetoworkspace, 1
+bind = $mod SHIFT, 2, movetoworkspace, 2
+bind = $mod SHIFT, 3, movetoworkspace, 3
+bind = $mod SHIFT, 4, movetoworkspace, 4
+bind = $mod SHIFT, 5, movetoworkspace, 5
+bind = $mod SHIFT, 6, movetoworkspace, 6
+bind = $mod SHIFT, 7, movetoworkspace, 7
+bind = $mod SHIFT, 8, movetoworkspace, 8
+bind = $mod SHIFT, 9, movetoworkspace, 9
+bind = $mod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mod, S, togglespecialworkspace, magic
+bind = $mod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -247,3 +245,14 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+bind=$mainMod, BACKSPACE ,submap,power
+submap=power
+    bind = , L, exec, hyprctl dispatch submap reset; hyprlock
+    bind = , S, exec, hyprctl dispatch submap reset; systemctl suspend
+    bind = , H, exec, hyprctl dispatch submap reset; systemctl hibernate
+    bind = , R, exec, hyprctl dispatch submap reset; systemctl reboot
+    bind = , P, exec, hyprctl dispatch submap reset; systemctl poweroff
+
+    bind= , escape , submap, reset
+submap=reset
