--- a/hyprland/hypr/hyprland.conf
+++ b/hyprland/hypr/hyprland.conf
@@ -150,6 +150,7 @@ device {
 
 exec-once = waybar
 exec-once = swww-daemon
+exec-once = sleep 1 && ~/.config/hypr/run_wallpaper_picker.sh
 
 ###################
 ### KEYBINDINGS ###
