--- a/waybar/waybar/config.jsonc
+++ b/waybar/waybar/config.jsonc
@@ -49,29 +49,7 @@
         "separate-outputs": true
     },
     "hyprland/workspaces": {
-        "format": "{icon}",
-        "on-click": "activate",
-        "format-icons": {
-            "1": "",
-            "2": "",
-            "3": "",
-            "4": "",
-            "5": "",
-            "6": "",
-            "7": "",
-            "8": "",
-            "9": "",
-            "active": "",
-            "urgent": "",
-            "persistent": "",
-            "focused": "",
-            "default": ""
-        },
-        "sort-by-number": true,
-        "persistent-workspaces": {
-            "*": 9,
-            "DP-1": 9
-        }
+        "on-click": "activate"
     },
     "clock": {
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
