--- a/hyprland/hypr/hyprland.conf
+++ b/hyprland/hypr/hyprland.conf
@@ -9,9 +9,7 @@ $tmux_attach = sh -c "tmux attach"
 $tmux_new = tmux
 
 # Monitors / Workspaces
-# See https://wiki.hypr.land/Configuring/Monitors/
-monitor=HDMI-A-2,1920x1080@75,1920x0,1
-monitor=DP-4,1920x1080@60,0x0,1
+source = monitors.conf
 
 general {
     gaps_in = 5
@@ -242,10 +240,14 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+#windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+#windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+xwayland {
+  force_zero_scaling = true
+}
 
 bind=$mainMod, BACKSPACE ,submap,power
 submap=power
